--- a/FrontEnd/src/assets/styles/activite.css
+++ b/FrontEnd/src/assets/styles/activite.css
@@ -198,7 +198,7 @@ body {
   /* padding:1rem; */
 
   font-weight: 500;
-  font-size: clamp(0.75rem, 3vw, 1rem);
+  font-size: clamp(1rem, 3vw, 1.2rem);
   line-height: 1;
   letter-spacing: 0;
   text-align: right;
@@ -231,7 +231,7 @@ body {
 
   /* padding:1rem; */
   font-weight: 500;
-  font-size: clamp(0.75rem, 3vw, 1rem);
+  font-size: clamp(1.1rem, 3vw, 1.2rem);
   line-height: 1;
   letter-spacing: 0;
   text-align: right;
@@ -331,7 +331,9 @@ body {
   right: 15%;
   width: 24%;
   height: auto;
+ 
   background: #F7F2ED;
+
   border-radius:
     84px;
   padding: 1rem;
@@ -877,7 +879,7 @@ padding-bottom:1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 0.5rem;
 
     width: 100%
   }
@@ -886,11 +888,14 @@ padding-bottom:1rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
+    padding: 0.5rem;
     width: 100%;
+    
 
   }
-
+.activite{
+border-radius: 25.2px;
+}
   .activite-title {
     /* background-color: darkcyan; */
     padding-right: 1rem;
@@ -918,17 +923,18 @@ padding-bottom:1rem;
   }
 
 
-  .out {
-
+.btn-activite{
     /* Hauteur égale pour avoir un cercle */
     /* Couleur du cercle */
-    border-radius: 50%;
+    
+   display: none;
 
   }
 
+
   .next,
   .prev {
-    border: 0.55px solid #000000;
+   
     background: #FFFFFF;
 
 
@@ -938,8 +944,7 @@ padding-bottom:1rem;
     justify-content: center;
     align-items: center;
 
-    width: 10px;
-    height: 5px
+
   }
   .activite-graph30{
     /* background-color: #575757; */
@@ -948,7 +953,27 @@ padding-bottom:1rem;
     
    
   }
-
+.out{
+  display:none
+}
+.btn-groupe{
+  /* background-color: salmon; */
+  width:100%;
+  gap:1rem;
+}
+.left-btn{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding-left:2rem;
+  padding-right:2rem;
+  gap:0.2rem;
+  width:55%;
+  padding-top:0rem;
+  padding-bottom:0rem;
+  
+}
   @media(min-height:700px) {
     .activite-groupe {
       /* background-color: red; */
@@ -987,6 +1012,19 @@ padding-bottom:1rem;
   justify-content: center;
   align-items: center; */
   }
+  
+ .next,
+  .prev {
+    border: 1px solid #000;  
+    background: #fff;
+    width: 30px;            
+    height: 30px;            
+    border-radius: 50%;       
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
 
 
 
