--- a/FrontEnd/src/assets/styles/formule.css
+++ b/FrontEnd/src/assets/styles/formule.css
@@ -1,3 +1,6 @@
+
+
+
 /* Style général */
 .formule-section {
   display: flex;
@@ -231,7 +234,7 @@ border-radius:118.77px;
   }
  .graph34{
     position:absolute;
-    top:30%;
+    top:24%;
     left:0;
     /* background-color: #2e8a00; */
   }
@@ -308,6 +311,13 @@ border-radius:118.77px;
     margin-right: 50%;
     margin-top: -12%;
   }
+  .graph34{
+
+/* 
+    background-color:seagreen; */
+    left:0;
+    top:26%;
+  }
  
   @media(min-height:1024px){
 
@@ -379,7 +389,8 @@ border-radius:118.77px;
     /* background-color: red; */
     left:-5rem;
     width:100%;
-    height:80vh
+    height:80vh;
+    top:25%
   }
 }
 
@@ -452,7 +463,9 @@ height:auto;
     top:40%;
 width:100%;
 height:50vh;
-top:38%
+top:28%;
+/* background-color: dodgerblue; */
 
   }
 }
+
