--- a/FrontEnd/src/assets/styles/header.css
+++ b/FrontEnd/src/assets/styles/header.css
@@ -1124,6 +1124,10 @@ background: #FCFAF8;
   padding:1rem;
  
 }
+.z{
+  background-color:aquamarine;
+  background:none;
+}
 .language-selector.test{
 
 
