--- a/FrontEnd/src/assets/styles/donate.css
+++ b/FrontEnd/src/assets/styles/donate.css
@@ -1,9 +1,4 @@
-*, *::before, *::after { 
-  box-sizing: border-box; 
-}
-body, h3, p { 
-  margin: 0; 
-}
+
 
 .donate-wrapper {
  
@@ -12,7 +7,8 @@ body, h3, p {
   justify-content: center;
   align-items: center;
   padding: 4rem 1rem;
-  width:100vw;
+  width:100%;
+  background-color: salmon;
   left:0;
  margin-top: 10%;
   position: relative;
@@ -37,6 +33,8 @@ height: 60vh;
   padding:0rem 1.5rem;
   background-color: #FFAA00;
 }
+
+
 
 .graphic-box {
   position: relative;
