--- a/FrontEnd/src/assets/styles/organisme.css
+++ b/FrontEnd/src/assets/styles/organisme.css
@@ -42,7 +42,7 @@
 
     .container {
         display: flex;
-        /* background-color: aqua; */
+        background-color: aqua;
         align-items: end;
     }
  
