--- a/FrontEnd/src/assets/styles/organisme.css
+++ b/FrontEnd/src/assets/styles/organisme.css
@@ -11,16 +11,24 @@
     .organisme-container {
         margin: 2rem;
         border: #E3DBD8 1px solid;
+        /* background-color: red; */
         display: flex;
         flex-direction: column-reverse;
-        height: 72vh;
+        height: 75vh;
 
+    }
+    .image1{
+        /* background-color: aquamarine; */
+                top: 2%;
+
+        width: 98%;
     }
 
     .containers {
         height: 80%;
         display: flex;
         align-items: end;
+        width: 100%;
         /* background-color: blueviolet; */
 
 
@@ -44,14 +52,18 @@
     .organisme-container {
         margin: 2rem;
         /* margin-top:-10%; */
-        /* background-color: aqua; */
+        background-color: aqua;
         padding: 2rem;
         border: #E3DBD8 1px solid;
         display: flex;
         flex-direction: column-reverse;
-        height: 85vh;
+        height: 95vh;
     }
-
+  .image1{
+        /* background-color: red; */
+        top: 2%;
+        width: 100%;
+    }
     .organisme-section {
         /* background-color: blue; */
         margin-top: -12%;
@@ -68,7 +80,7 @@
     .containers {
         display: flex;
         align-items: end;
-        top: -5%;
+        /* top: -5%; */
         /* background-color: blueviolet;     */
 
     }
